# playground

./: README.md  pyproject.toml  sql-helper.sql  style.grass  windows-terminal-settings.json
golang/: go.mod
golang/goplay/: go.mod  go.sum  main.go
golang/goplay/aws/config/: config.go
golang/goplay/aws/lex/: model.go  runtime.go
powershell/: pwsh7-profile.ps1
python/: combine-csv-files.py
python/aws/: cloudwatch-metrics-get.py  codebuild-update-project.py  codepipeline-test.py  lambda-delete-layer-versions.py  s3-bucket-delete.py  s3-bucket-objects-delete.py  s3-extract-file-from-zip-2.py  s3-extract-file-from-zip.py  s3-move-objects.py
